<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="307dp"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@drawable/insta_nannies_logo">

            </ImageView>

            <com.instantnannies.user.CustomFont.CustomBoldTextView
                android:layout_width="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/dim_black"
                android:layout_height="wrap_content">

            </com.instantnannies.user.CustomFont.CustomBoldTextView>

            <com.instantnannies.user.CustomFont.CustomTextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/enter_your_info"
                android:textSize="16sp"
                android:layout_height="wrap_content">

            </com.instantnannies.user.CustomFont.CustomTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content">

                <com.instantnannies.user.CustomFont.CustomEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:id="@+id/first_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@id/last_name"
                    android:layout_height="wrap_content">

                </com.instantnannies.user.CustomFont.CustomEditText>

                <com.instantnannies.user.CustomFont.CustomEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/last_name"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/email"
                    android:layout_height="wrap_content">

                </com.instantnannies.user.CustomFont.CustomEditText>

            </LinearLayout>

            <com.instantnannies.user.CustomFont.CustomEditText
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/email"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/et_phone"
                android:layout_height="wrap_content">

            </com.instantnannies.user.CustomFont.CustomEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"

                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:defaultNameCode="PK"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

                <com.instantnannies.user.CustomFont.CustomEditText
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number"
                    android:id="@+id/et_phone"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/password"
                    android:layout_height="wrap_content">

                </com.instantnannies.user.CustomFont.CustomEditText>
            </LinearLayout>

            <com.instantnannies.user.CustomFont.CustomEditText
                android:layout_width="match_parent"

                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content">

            </com.instantnannies.user.CustomFont.CustomEditText>
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_no_of_childs"
                android:layout_marginLeft="-5dp"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:fontFamily="@font/circularstd_book"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_height="1dp">

            </View>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/childs_rv"
                android:visibility="gone"
                android:background="@color/white"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


            <com.instantnannies.user.CustomFont.CustomButton
                android:layout_width="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:id="@+id/btn_register"
                android:background="@drawable/rounded_button_bg"
                android:layout_height="wrap_content">

            </com.instantnannies.user.CustomFont.CustomButton>


        </LinearLayout>



    </ScrollView>

</RelativeLayout>