<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_drawable" />

        <com.instantnannies.user.CustomFont.CustomBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <com.instantnannies.user.CustomFont.CustomBoldTextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_below="@+id/lnrTitle"
        android:text="@string/help_title"
        android:textColor="@color/black_text_color"/>


    <ImageView
        android:id="@+id/img_executive"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_txt"
        android:layout_marginTop="20dp"
        android:src="@drawable/help_executive" />


    <LinearLayout
        android:id="@+id/lnrIcons"
        android:layout_width="match_parent"
        android:layout_below="@+id/img_executive"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_mail"
            android:src="@drawable/help_call"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/img_mail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/help_mail" />

        <ImageView
            android:id="@+id/img_web"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_mail"
            android:src="@drawable/help_web" />
    </LinearLayout>
    <com.instantnannies.user.CustomFont.CustomBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrIcons"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/help_msg"
        android:lineSpacingMultiplier="1.2"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

</RelativeLayout>
